// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SvelteKit Steps > can setup layout file if it does not exist in js 1`] = `
"<script>
  import \\"../app.css\\";
</script>

<slot />
"
`;

exports[`SvelteKit Steps > can setup layout file if it does not exist in ts 1`] = `
"<script lang=\\"ts\\">
  import \\"../app.css\\";
</script>

<slot />
"
`;
